Created a dedicated server class (mostly Dave's code)